--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@
 body {
     margin: 0;
     background-color: #323232;
-    font-family: 'Open Sans', sans-serif;;
+    font-family: 'Open Sans', sans-serif;
+    ;
 }
 
 h1 {
@@ -13,13 +14,19 @@ h1 {
 }
 
 #content {
+    position: relative;
+    width: 250px;
+    height: 250px;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 300px;
+    margin: 300px auto 0 auto;
 }
 
 table {
+    position: relative;
+    top: 0;
+    left: 0;
     border-collapse: separate;
     border-spacing: 0;
 }
@@ -28,10 +35,24 @@ td {
     width: 80px;
     height: 80px;
     text-align: center;
-    font-size: 48px;
+    font-size: 0;
+    padding: 0;
+    line-height: 0;
     font-weight: bold;
     color: white;
     cursor: pointer;
+    position: relative;
+}
+
+td svg {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 70px;
+    height: 70px;
+    pointer-events: none;
+    display: block;
 }
 
 td:hover {
@@ -44,4 +65,35 @@ tr:not(:last-child) td {
 
 td:not(:last-child) {
     border-right: 5px solid white;
+}
+
+.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.mt-32 {
+    margin-top: 32px;
+}
+
+button {
+    display: block;
+    padding: 12px 28px;
+    font-size: 16px;
+    font-weight: 600;
+    color: #323232;
+    background-color: white;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: background-color 0.2s ease, transform 0.1s ease;
+}
+
+button:hover {
+    background-color: #e6e6e6;
+}
+
+button:active {
+    transform: scale(0.97);
 }
